[package]
name = "libtw2-huffman-reference"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
edition = "2021"
rust-version = "1.63.0"

[dependencies]
libtw2-common.workspace = true
libtw2-huffman.workspace = true
libtw2-huffman-reference-sys = { path = "sys" }
buffer = "0.1.9"
libc = "0.2.0"
